data/derived/comb/progs/unify/prog4165.ml.out
Characters 52-53:
  h   -> if (h != 0) then []
                  ^
Error: This expression has type int but an expression was expected of type
         'a list
